--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>test</groupId>
-    <artifactId>consoleTest</artifactId>
+    <artifactId>modern-java-in-action</artifactId>
     <version>1.0-SNAPSHOT</version>
   <build>
     <plugins>
